prior to deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/ikaem/kulturaljka-server/issues"
   },
-  "homepage": "https://github.com/ikaem/kulturaljka-server#readme"
+  "homepage": "https://github.com/ikaem/kulturaljka-server#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "knex": "^0.20.4",
+    "pg": "^7.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
