--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,6 @@
     "pg": "^7.15.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
